--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
   # https://github.com/balenablocks/hostname
   hostname:
     build: ./core/hostname
-    restart: no
+    restart: never
     labels:
       io.balena.features.supervisor-api: 1
     environment:
